align ux for gas and stability fees & add estimate client end point & swagger update & except luna from tax
